# DiGriPy

./: LICENSE  README.md  setup.cfg
digripy/: digripynetwork.py  pipe_definitions.json  run.py  simulation.py  tools.py
example110C/: demands.csv
example80C/: network.csv
tests/example110C/: settings.csv
tests/example40C/: demands.csv  settings.csv
tests/example80C/: demands.csv  settings.csv
