[metadata]
name = digripy
version = 0.1
author = Lena Vorspel and Jens Bücker
author_email = lena.vorspel@ifam.fraunhofer.de
description = District Heating Grid Simulation in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lvorspel/DiGriPy
project_urls =
    Bug Tracker = https://github.com/lvorspel/DiGriPy/issues
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.6
install_requires =
    TESPy >= 0.4.2.post2
    openpyxl
    numpy
    bokeh
    pandas
    jsonref
    matplotlib

[options.package_data]
digripy = pipe_definitions.json